Enable Ant-based running of the more complex tests
git-svn-id: https://activeobjects.dev.java.net/svn/activeobjects/trunk@970 69e892e8-b12f-0410-b7e1-b50061bc6545